Minor fixes (text aligns, responsive)

--- a/src/styles/contactPage.scss
+++ b/src/styles/contactPage.scss
@@ -4,6 +4,12 @@
   width: 100%;
   height: 100%;
 
+  text-align: center;
+
+  h3 {
+    margin: 0 10px;
+  }
+
   @media(max-width: 900px) {
     height: 1000px;
   }
@@ -27,7 +33,7 @@
 
   #headerButtons {
     display: flex;
-    margin-right: 30px;
+    margin-right: 20px;
 
     i {
       color: $main-color;
@@ -49,6 +55,10 @@
         color: $accent;
         background-color: $main-color;
       }
+    }
+
+    @media (max-width: 500px) {
+      margin-right: 10px;
     }
   }
 
@@ -91,7 +101,7 @@
   form {
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: start;
     text-align: left;
     max-width: 500px;
     padding: 0 25px;
